# AHEAD

./: .gitignore  CMakeLists.txt
chaos/: CMakeLists.txt  macros.hpp  ssbm-init.cpp  ssbm-q11_continuous.cpp  ssbm-q11_continuous_reenc.cpp  ssbm-q11_early.cpp  ssbm-q11_late.cpp  ssbm-q11_normal.cpp  ssbm-q41_continuous.cpp  ssbm-q41_continuous_reenc.cpp  ssbm-q41_early.cpp  ssbm-q41_late.cpp  ssbm-q41_normal.cpp
lib/column_operators/AN/: aggregateAN_scalar.tcc
lib/column_storage/: BucketManager.cpp
lib/util/: argumentparser.cpp
tools/: CMakeLists.txt
